<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="timestamp_not_available">not available</string>
    <string name="no_comment">no comments available</string>
    <string name="timestamp_text">Camera captured on:</string>
    <string name="upload_text">Camera upload on:</string>
    <string name="comment_text">Comments:</string>
    <string name="angle_text">Angle (from horizontal):</string>
    <string name="type_text">Type:</string>
    <string name="area_text">Area:</string>
    <string name="mount_text">Mounted on:</string>
    <string name="direction_text">Direction:</string>
    <string name="height_text">Height (m):</string>
    <string name="app_label">unsurv</string>
    <string name="history_label">History</string>
    <string name="detector_label">Detect Cameras</string>
    <string name="map_label">Map</string>
    <string name="statistics_label">Statistics</string>
    <string name="settings_label">Settings</string>
    <string name="organize_label">Scan your city</string>
    <string name="manual_capture_label">Manual Capture</string>
    <string name="draw_on_training_image_label">Draw Cameras</string>
    <string name="training_capture_label">Training</string>
    <string name="edit_camera_label">Edit Camera</string>
    <string name="licences_label">Licences</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="permanently_delete_camera">Permanently delete this camera?</string>
    <string name="history_type_text">Type: %s</string>
    <string name="history_area_text">Area: %s</string>
    <string name="history_training_text">Training Capture</string>
    <string name="history_upload_text">Upload: %s</string>
    <string name="manual_capture_button_text">MANUAL</string>
    <string name="general_total_camera_text">Cameras in this area:</string>
    <plurals name="total_cameras_in_map_text">
        <item quantity="one">camera in this area</item>
        <item quantity="other">cameras in this area</item>
    </plurals>
    <string name="timemachine_text">All cameras until: %s</string>
    <string name="window_upload_text">Camera uploaded on: \n%s</string>
    <string name="organize_lock_grid">Lock grid + map:</string>
    <string name="organize_center_lat">Center latitude:</string>
    <string name="organize_center_lon">Center longitude:</string>
    <string name="organize_y_size">Height (m):</string>
    <string name="organize_x_size">Length (m):</string>
    <string name="organize_rows">Rows:</string>
    <string name="organize_columns">Columns:</string>
    <string name="organize_reset_button">reset</string>
    <string name="organize_draw_button">Draw Grid</string>
    <string name="organize_back">Back</string>
    <string name="organize_hint_lat">Latitude</string>
    <string name="organize_hint_lon">Longitude</string>
    <string name="organize_hint_length">Length</string>
    <string name="organize_hint_height">Height</string>
    <string name="organize_hint_rows">Rows</string>
    <string name="organize_hint_columns">Columns</string>
    <plurals name="number_of_cameras_in_area">
        <item quantity="one">camera in your area</item>
        <item quantity="other">cameras in your area</item>
    </plurals>
    <plurals name="captures_by_user">
        <item quantity="one">capture by you</item>
        <item quantity="other">captures by you</item>
    </plurals>
    <string name="added_7d_text">added in the last 7 days</string>
    <string name="added_28d_text">added in the last 28 days</string>
    <string name="global_today_text">added globally today</string>
    <string name="global_28d_text">added globally in the last 28 days</string>
    <string name="global_total_text">cameras global total</string>
    <string name="zero_placeholder_statistics">0</string>
    <string name="edit_button">EDIT LOCATION</string>
    <string name="save_button">SAVE &amp; GO</string>
    <string name="take_picture_button">TAKE PIC</string>
    <string name="capture">CAPTURE</string>
    <string name="capture_training_image_info">This function allows you to capture images of surveillance cameras to improve the object detection accuracy. After taking the image you will prompted to draw rectangles around surveillance cameras.</string>
    <string name="storage_title">Storage</string>
    <string name="general_title">General</string>
    <string name="synchronization_title">Synchronization</string>
    <string name="map_title">Map</string>
    <string name="capture_title">Capture</string>
    <string name="synchronized_cameras_size">Storage used by synchronized cameras:</string>
    <string name="captured_cameras_size">Storage used by captured cameras:</string>
    <string name="training_cameras_size">Storage used by training cameras:</string>
    <plurals name="cameras_in_database">
        <item quantity="one">%d camera in local database</item>
        <item quantity="other">%d cameras in local database</item>
    </plurals>
    <string name="tutorial_map_redraw">REDRAW</string>
    <string name="tutorial_map_set_home">SET HOME</string>
    <string name="tutorial_map_message">Please select an area for offline availability</string>
    <string name="tutorial_sync_save_exit">SYNCHRONIZE, SAVE AND EXIT</string>
    <string name="tutorial_save_exit">SAVE AND EXIT</string>
    <string name="tutorial_sync_interval_text">Synchronization interval:</string>
    <string name="tutorial_sync_offline_mode_text">Enable offline mode:</string>
    <string name="tutorial_sync_min_delay_text">Min delay before upload:</string>
    <string name="tutorial_sync_max_delay_text">Max delay before upload:</string>
    <string name="tutorial_sync_server_url_hint">Server URL:</string>
    <string name="tutorial_sync_default_url">https://overpass-api.de/api/interpreter?</string>
    <string name="tutorial_sync_default_interval">1</string>
    <string name="tutorial_sync_default_min_delay">6</string>
    <string name="tutorial_sync_default_max_delay">3</string>
    <string name="tutorial_sync_info_text">- Offline mode disables ALL connections; the app just works with the default database\n\n
- Synchronization interval is the time between each update from the database server. Uploads will only take place with each synchronization interval. If you choose a long interval uploads might take longer than max delay.\n\n
- Min upload delay specifies the minimum time that has to pass after a camera is captured before the upload happens. This is to protect your privacy by giving you some time to leave the area before the camera appears in the database. You can always manually upload a camera before the time has passed.\n\n
- Max upload delay specifies a limit to how much time passes at the maximum between a camera capture and the upload to the database.</string>
    <string name="tutorial_all_permissions_button">GRANT ALL</string>
    <string name="tutorial_location_permission_button">GRANT LOCATION</string>
    <string name="tutorial_camera_permission_button">GRANT CAMERA</string>
    <string name="tutorial_storage_permission_button">GRANT STORAGE</string>
    <string name="tutorial_permissions_info_text">This application needs some permissions to function properly. Absolutely no personal data is gathered.
To access the online database an access key is generated every week. Your captures are linked to that key. No record connecting keys to devices is kept. This is done to ensure data integrity and remove malicious entries.\nYou can always check the database source code at\nhttps://github.com/unsurv/flask_api\nThe only thing uploaded will be the position, type and method of capture of the surveillance camera and optionally an image. You can always check the source code yourself to see what information is sent to the server at\nhttps://github.com/unsurv/unsurv-android.\n\n

- Storage permissions are needed to save images and read map data from your phone\'s storage.\n\n
- Camera permission is needed to use the object detection model to automatically capture surveillance cameras.\n\n
- Location permission is optional, but needed if you want to automatically capture surveillance cameras or center the map on your current position.</string>
    <string name="tutorial_capture_info_text">This application has different methods to capture and map surveillance cameras.
\n\n- By default it uses a self trained object detection model to detect surveillance cameras through the device\'s camera. This mode uses the device\'s orientation and location to calculate the camera position. It\'s most accurate if you move by the camera and capture it from different angles. You can always edit the exact location in your local history before uploading.
\n\n- You can choose to manually capture surveillance cameras. This can be set as the default method.
\n\n- A third way is to capture training images to improve the object detection
\n\n All these options are available via buttons from the default detection method</string>
    <string name="licence_title">Licences:</string>
    <string name="tensorflow_source">Tensorflow Android Example Application</string>
    <string name="osmdroid_source">Osmdroid / OpenStreetMap</string>
    <string name="osmdroidbonus_source">Osmdroid Bonuspack</string>
    <string name="sunders_source">Surveillance Under Surveillance</string>
    <string name="picasso_source">Picasso</string>
    <string name="google_tink_source">Google Tink</string>
    <string name="google_volley_source">Google Volley</string>
    <string name="sunders_licence">This project has been inspired by \nhttps://sunders.uber.space , new and more intrusive laws and the increasing amount of everyday surveillance\n

    </string>
    <string name="tensorflow_licence">https://github.com/tensorflow/tensorflow/tree/master/tensorflow/examples/android \n\nCopyright 2016 The TensorFlow Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the \"License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\nCopyright 2017 The Android Open Source Project
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
</resources>