<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/edit_camera_container"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="9"
        android:orientation="vertical">


        <org.osmdroid.views.MapView
            android:id="@+id/organize_camera_map"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="6"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="3"
            android:scrollbarSize="6dp"
            android:fadeScrollbars="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_center_lat"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_center_lon"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_x_size"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_y_size"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_rows"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/organize_columns"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">

                    <EditText
                        android:autofillHints="@string/organize_hint_lat"
                        android:inputType="numberDecimal"
                        android:id="@+id/organize_center_lat_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"

                        android:gravity="start|center_vertical"/>

                    <EditText
                        android:autofillHints="@string/organize_hint_lon"
                        android:inputType="numberDecimal"
                        android:id="@+id/organize_center_lon_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"
                        android:gravity="start|center_vertical"/>


                    <EditText
                        android:autofillHints="@string/organize_hint_length"
                        android:inputType="number"
                        android:id="@+id/organize_length_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"
                        android:gravity="start|center_vertical"/>

                    <EditText
                        android:autofillHints="@string/organize_hint_height"
                        android:inputType="number"
                        android:id="@+id/organize_height_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"
                        android:gravity="start|center_vertical"/>

                    <EditText
                        android:autofillHints="@string/organize_hint_rows"
                        android:inputType="number"
                        android:id="@+id/organize_rows_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"
                        android:gravity="start|center_vertical"/>


                    <EditText
                        android:autofillHints="@string/organize_hint_columns"
                        android:inputType="number"
                        android:id="@+id/organize_columns_edit"
                        android:layout_width="140dp"
                        android:layout_height="44dp"
                        android:gravity="start|center_vertical"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/organize_reset"
                android:text="@string/organize_reset_button"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_margin="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/organize_draw"
                android:text="@string/organize_draw_button"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_margin="5dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/organize_back"
                android:text="@string/organize_back"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_margin="5dp"
                />



        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation_items"
        app:itemTextColor="@color/bottom_navigation"
        app:itemIconTint="@color/bottom_navigation"
        />





</LinearLayout>