<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/history_linear"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"

        />

    <LinearLayout
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">



        <TextView
            android:id="@+id/licences_tensorflow"
            android:text="@string/tensorflow_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_osmdroid"
            android:text="@string/osmdroid_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_sunders"
            android:text="@string/sunders_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_osmdroid_bonus"
            android:text="@string/osmdroidbonus_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_picasso"
            android:text="@string/picasso_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_tink"
            android:text="@string/google_tink_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/licences_volley"
            android:text="@string/google_volley_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />


        <TextView
            android:scrollbars="vertical"
            android:autoLink="web"
            android:id="@+id/licence_text"
            android:text="@string/sunders_licence"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>






    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation_items"
        app:itemTextColor="@color/bottom_navigation"
        app:itemIconTint="@color/bottom_navigation"
        />


</LinearLayout>


