<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="9"
        android:background="#000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_cameras_in_area_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero_placeholder_statistics"
            android:textSize="80sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/total_cameras_in_area_info_statistics"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="24sp"
            android:gravity="center"
            />


        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:layout_width="0sp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:background="#000"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/added_past_7_days_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/added_7d_text"
                    android:gravity="center"
                    />


                <TextView
                    android:id="@+id/added_past_28_days_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/added_28d_text"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/added_by_user_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:id="@+id/added_by_user_info_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:gravity="center"
                    />






            </LinearLayout>



            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:background="#000"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/global_today_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/global_today_text"
                    android:gravity="center"
                    />


                <TextView
                    android:id="@+id/global_28days_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/global_28d_text"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/global_total_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/zero_placeholder_statistics"
                    android:textSize="60sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/global_total_text"
                    android:gravity="center"
                    />


        </LinearLayout>




        </LinearLayout>



    </LinearLayout>




    <android.support.design.widget.BottomNavigationView

        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:background="#000"
        app:menu="@menu/bottom_navigation_items"/>


</LinearLayout>

